# CV-Maker

./: .env.example  LICENSE.md  README.md  README.pl.md  index.html  package-lock.json  package.json  roadmap.md  vite.config.ts  vitest.config.ts  vitest.setup.ts
.githooks/: pre-commit
.github/workflows/: ci.yml
coverage/: index.html
coverage/src/: App.tsx.html  index.html
coverage/src/components/: Layout.tsx.html  Stepper.tsx.html  index.html
coverage/src/lib/: index.html  samples.ts.html
coverage/src/state/: index.html  useProject.tsx.html
data/examples/: sample-cv.md  sample-job-offer.md
docs/: architecture.md  contributing.md  desktop.md  roadmap.md  usage.md
scripts/: smoke.ts
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Layout.tsx  Stepper.test.tsx  Stepper.tsx
src/features/analysis/: AnalysisView.test.tsx  AnalysisView.tsx
src/features/cover/: CoverLetterView.test.tsx  CoverLetterView.tsx
src/features/input/: InputView.test.tsx  InputView.tsx
src/features/result/: ResultView.test.tsx  ResultView.tsx
src/features/settings/: SettingsView.test.tsx  SettingsView.tsx
src/features/start/: StartView.test.tsx  StartView.tsx
src/lib/: samples.ts
src/lib/ai/: client.ts  config.ts
src/lib/core/: keywords.ts  types.ts
src/lib/export/: markdown.ts  pdf.ts
src/lib/i18n/: translations.ts
src/state/: useProject.tsx
src/styles/: global.css
test/: core.test.ts
(+42 files in other folders)
