[package]
name = "cv-tailor"
version = "1.0.0"
description = "CV Tailor — local-first CV tailoring desktop app"
authors = ["MarcinDeeec"]
edition = "2021"
rust-version = "1.77.2"

# Biblioteka współdzielona przez desktop i (ewentualnie) mobile.
[lib]
name = "cv_tailor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Domyślnie włączane przez `tauri dev`/`tauri build`.
custom-protocol = ["tauri/custom-protocol"]
